--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,5 +23,23 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: 'DynaPuff', system-ui;
+  overflow: hidden;
 }
+
+.wave-bottom {
+  position: absolute;
+  top: 50vh;
+  left: 0;
+  width: 100%;
+  height: 50vh;
+  z-index: -1;
+}
+
+.wave-wrapper {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
+
+
 
