--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=DynaPuff&display=swap');
 @import "tailwindcss";
+
 
 :root {
   --background: #ffffff;
@@ -41,5 +44,20 @@ body {
   overflow: hidden;
 }
 
+.scribble {
+  font-family: 'Caveat', cursive;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+  border-right: 2px solid #000;
+  animation: typing 2s steps(20, end) forwards;
+  transform: rotate(-3deg);
+}
+
+@keyframes typing {
+  to {
+    width: 100%;
+  }
+}
 
 
